--- a/client/src/shared/ui/button/Button.module.scss
+++ b/client/src/shared/ui/button/Button.module.scss
@@ -1,30 +1,12 @@
 .root {
 	background: #63c2a4;
-	outline: 1px solid #bcbcbc;
-	border: none;
-	transition: all;
-	transition-duration: 200ms;
-	min-width: 140px;
-	cursor: pointer;
-	line-height: 40px;
-	color: #fff;
+	color: #fff !important;
 
 	&:hover {
-		background: #4acaa2;
+		background: #1fa57a !important;
 	}
 
 	&:active {
 		background: #63c2a4;
-	}
-
-	&_btnErr {
-		background: rgb(72, 72, 72);
-		outline: 1px solid #e03737;
-		transition: all;
-		transition-duration: 600ms;
-
-		&:hover {
-			background: rgb(59, 59, 59);
-		}
 	}
 }
