--- a/client/src/shared/ui/input/Input.module.scss
+++ b/client/src/shared/ui/input/Input.module.scss
@@ -1,22 +1,18 @@
 .root {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-
+	width: 100%;
 	&__label {
 		font-size: 16px;
 		font-weight: 500;
 		padding-left: 4px;
+		display: block;
+		margin-bottom: 5px;
 	}
 
 	&__input {
-		padding: 0 5px;
-		max-width: 460px;
-		width: 460px;
-		max-height: 52px;
-		height: 52px;
+		padding: 10px 10px;
 		background-color: #fff;
 		outline: 1px solid #bcbcbc;
+		width: 100%;
 		border: none;
 		font-size: 16px;
 		transition: all;
