--- a/client/src/shared/ui/modal/Modal.module.scss
+++ b/client/src/shared/ui/modal/Modal.module.scss
@@ -2,20 +2,24 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	right: 0;
-	bottom: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 	background: rgba(0, 0, 0, 0.3);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	visibility: hidden;
 	opacity: 0;
+
 	transition: all 0.2s linear;
 	&_open {
 		opacity: 1;
 		visibility: visible;
 	}
 	&__body {
+		height: 300px;
+		overflow-y: scroll;
 		background: #fff;
 		padding: 40px;
 		border-radius: 5px;
