--- a/client/src/widgets/login/ui/form/LoginForm.module.scss
+++ b/client/src/widgets/login/ui/form/LoginForm.module.scss
@@ -7,19 +7,22 @@
 	align-items: center;
 
 	&__container {
-		padding: 41px 0 51px 0;
-		width: 100%;
+		width: 300px;
 		height: fit-content;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		flex-direction: column;
-		gap: 35px;
+		row-gap: 25px;
 
 		&__validate {
+			width: 100%;
 			&_textErr {
 				color: #e03737;
 			}
+		}
+		&__button {
+			width: 100%;
 		}
 	}
 }
