--- a/client/src/widgets/ListOfClients/ui/@ClientItem/ClientItem.module.scss
+++ b/client/src/widgets/ListOfClients/ui/@ClientItem/ClientItem.module.scss
@@ -1,56 +1,3 @@
-// .root {
-// 	user-select: none;
-
-// 	&__list {
-// 		gap: 100px;
-// 		overflow-x: scroll;
-
-// 		margin: 0;
-// 		padding: 20px 20px;
-// 		outline: 1px solid #b9b9b9;
-// 		list-style: none;
-// 		display: flex;
-// 		justify-content: space-around;
-// 		align-items: center;
-
-// 		&_listItem {
-// 			max-width: 50px;
-// 			display: flex;
-// 			flex-direction: column;
-// 			font-weight: 500;
-
-// 			&_item {
-// 				display: flex;
-
-// 				&_status {
-// 					max-width: 18px;
-// 					width: 18px;
-// 					max-height: 18px;
-// 					height: 18px;
-// 				}
-// 			}
-
-// 			&_opacity {
-// 				color: #b9b9b9;
-// 			}
-// 		}
-
-// 		&_listItem:nth-child(2) {
-// 			width: 56px;
-// 			height: 56px;
-// 		}
-
-// 		&_listItem:nth-child(3) {
-// 			color: #4acaa2;
-// 		}
-
-// 		&_listItem:nth-child(6) {
-// 			column-gap: 10px;
-// 			max-width: 200px;
-// 		}
-// 	}
-// }
-
 .scrollbar_disable {
 	scrollbar-width: none;
 	-ms-overflow-style: none;
@@ -60,40 +7,37 @@
 	height: 0;
 }
 
-// TODO:
 .root {
 	user-select: none;
 
-	&__primaryList {
-		display: flex;
-		align-items: center;
-		list-style: none;
+	&__container {
+		overflow-x: scroll;
 
-		&_primaryItem {
-			padding: 0 50px 0 0;
-			align-items: center;
-			display: flex;
-			gap: 50px;
-
-			&_userPng {
-				width: 50px;
-				height: 50px;
-			}
-		}
-
-		&__secondaryList {
-			padding: 0 60px 0 0;
-			align-items: center;
-			justify-content: space-around;
+		&__primaryList {
+			padding: 10px 20px;
+			justify-content: space-between;
 			gap: 130px;
-			overflow-x: scroll;
-			display: grid;
-			grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+			list-style: none;
+			display: flex;
 			list-style: none;
 
-			&_secondaryItem {
+			&_primaryItem {
+				align-items: center;
+				gap: 10px;
 				max-width: 50px;
 				display: flex;
+
+				&_clientMore {
+					display: flex;
+					align-items: center;
+				}
+
+				&_clientName {
+					justify-content: center;
+					display: flex;
+					flex-direction: column;
+					color: #4acaa2;
+				}
 
 				&_item {
 					&_status {
@@ -101,15 +45,6 @@
 						height: 15 px;
 					}
 				}
-			}
-
-			&_secondaryItem:nth-child(1) {
-				flex-direction: column;
-				color: #4acaa2;
-			}
-			&_secondaryItem:nth-child(4) {
-				flex-direction: column;
-				max-width: 250px;
 			}
 		}
 	}
