add textarea component && fix login bugs && rewrite modal

--- a/client/src/shared/ui/input/index.module.scss
+++ b/client/src/shared/ui/input/index.module.scss
@@ -18,6 +18,14 @@
 		transition: all;
 		transition-duration: 300ms;
 
+		&_textarea {
+			resize: none !important;
+		}
+
+		&:focus {
+			outline-color: #1352a3 !important;
+		}
+
 		&_inputErr {
 			outline: 1px solid #e03737;
 		}
