--- a/client/src/shared/ui/modal/Modal.module.scss
+++ b/client/src/shared/ui/modal/Modal.module.scss
@@ -4,21 +4,19 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
 	background: rgba(0, 0, 0, 0.3);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	visibility: hidden;
 	opacity: 0;
-
 	transition: all 0.2s linear;
 	&_open {
 		opacity: 1;
 		visibility: visible;
 	}
 	&__body {
-		height: 300px;
+		height: 70dvh;
 		overflow-y: scroll;
 		background: #fff;
 		padding: 40px;
@@ -26,5 +24,8 @@
 		-webkit-box-shadow: 0px 0px 42px 20px rgba(233, 238, 242, 0.54);
 		-moz-box-shadow: 0px 0px 42px 20px rgba(233, 238, 242, 0.54);
 		box-shadow: 0px 0px 42px 20px rgba(233, 238, 242, 0.54);
+		@media (max-width: 480px) {
+			padding: 20px;
+		}
 	}
 }
