--- a/client/src/widgets/client/ui/form/Form.module.scss
+++ b/client/src/widgets/client/ui/form/Form.module.scss
@@ -1,6 +1,10 @@
 .root {
 	width: 350px;
 
+	@media (max-width: 420px) {
+		width: 80dvw;
+	}
+
 	&__title {
 		margin-bottom: 30px !important;
 		text-align: center;
@@ -11,7 +15,5 @@
 	}
 	&__item {
 		margin-bottom: 20px;
-		&:last-child {
-		}
 	}
 }
