--- a/client/src/pages/Layout.module.scss
+++ b/client/src/pages/Layout.module.scss
@@ -11,9 +11,10 @@
 	}
 
 	.outlet__wrapper {
-		overflow: auto;
 		width: 100%;
 		height: 100%;
+		padding: 20px;
+		overflow: auto;
 	}
 
 	.vertical__wrapper {
