--- a/client/src/widgets/Topbar/ui/Topbar.module.scss
+++ b/client/src/widgets/Topbar/ui/Topbar.module.scss
@@ -10,43 +10,43 @@
 		display: flex;
 		align-items: center;
 		gap: 15px;
-		&__invoice {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			gap: 5px;
-			margin-right: 15px;
-			svg {
-				color: #c0c0c0;
-			}
-			&__count {
-				color: #89dbc2;
-			}
-		}
+		// &__invoice {
+		// 	display: flex;
+		// 	justify-content: center;
+		// 	align-items: center;
+		// 	gap: 5px;
+		// 	margin-right: 15px;
+		// 	svg {
+		// 		color: #c0c0c0;
+		// 	}
+		// 	&__count {
+		// 		color: #89dbc2;
+		// 	}
+		// }
 
-		&__folder,
-		&__notifications {
-			position: relative;
-			aspect-ratio: 1 / 1;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			width: 30px;
-			border: 2px solid #e3e3e5;
-			border-radius: 50%;
-			color: #c0c0c0;
-			span {
-				position: absolute;
-				font-weight: 700;
-				left: 60%;
-				bottom: 45%;
-				border: 1px solid #fff;
-				padding: 2px 4px;
-				font-size: 10px;
-				color: black;
-				background-color: #fcc035;
-			}
-		}
+		// &__folder,
+		// &__notifications {
+		// 	position: relative;
+		// 	aspect-ratio: 1 / 1;
+		// 	display: flex;
+		// 	justify-content: center;
+		// 	align-items: center;
+		// 	width: 30px;
+		// 	border: 2px solid #e3e3e5;
+		// 	border-radius: 50%;
+		// 	color: #c0c0c0;
+		// 	span {
+		// 		position: absolute;
+		// 		font-weight: 700;
+		// 		left: 60%;
+		// 		bottom: 45%;
+		// 		border: 1px solid #fff;
+		// 		padding: 2px 4px;
+		// 		font-size: 10px;
+		// 		color: black;
+		// 		background-color: #fcc035;
+		// 	}
+		// }
 
 		&__profile {
 			position: relative;
