add validation && fix bugs

--- a/client/src/shared/ui/input/index.module.scss
+++ b/client/src/shared/ui/input/index.module.scss
@@ -25,5 +25,10 @@
 		&_inputErr {
 			outline: 1px solid #e03737;
 		}
+		&_textErr {
+			display: block;
+			padding: 4px;
+			color: #e03737;
+		}
 	}
 }
