--- a/client/src/widgets/Login/ui/form/LoginForm.module.scss
+++ b/client/src/widgets/Login/ui/form/LoginForm.module.scss
@@ -21,5 +21,11 @@
 		&__button {
 			width: 100%;
 		}
+		&__message {
+			color: white;
+			padding: 10px 20px;
+			background-color: rgb(255, 63, 63);
+			border-radius: 20px;
+		}
 	}
 }
