--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -1,6 +1,28 @@
-@import 'modern-normalize/modern-normalize.css';
-@import './styles/reset';
+@import "modern-normalize/modern-normalize.css";
+@import "./styles/reset";
 
 body {
 	background: #f5f5f5;
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
