--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -1,6 +1,14 @@
 @import "modern-normalize/modern-normalize.css";
 @import "./styles/reset";
 
+:root {
+	--accent: rgb(0, 149, 55);
+	--accent-darker: rgb(0, 114, 42);
+	--accent-lighter-transparent: rgba(0, 184, 68, 0.2);
+
+	--hover-outline-color: #dfdfdf;
+}
+
 body {
 	background: #f5f5f5;
 }
