--- a/client/src/widgets/Topbar/ui/Topbar.module.scss
+++ b/client/src/widgets/Topbar/ui/Topbar.module.scss
@@ -6,11 +6,14 @@
 	width: 100%;
 	height: 70px;
 	background-color: #ffffff;
-
+	&__title {
+		// flex-shrink: 1;
+	}
 	&__buttons {
 		display: flex;
 		align-items: center;
 		gap: 15px;
+		// flex-shrink: 1;
 		// &__invoice {
 		// 	display: flex;
 		// 	justify-content: center;
@@ -91,6 +94,11 @@
 			}
 		}
 	}
+	@media (max-width: 768px) {
+		&__fio {
+			display: none;
+		}
+	}
 }
 
 @keyframes rotate {
@@ -101,3 +109,4 @@
 		transform: rotate(360deg);
 	}
 }
+
