--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -1,5 +1,5 @@
-@import "modern-normalize/modern-normalize.css";
-@import "./styles/reset";
+@import 'modern-normalize/modern-normalize.css';
+@import './styles/reset';
 
 :root {
 	--accent: rgb(0, 149, 55);
