--- a/client/src/entities/Table/ui/Table.module.scss
+++ b/client/src/entities/Table/ui/Table.module.scss
@@ -1,7 +1,7 @@
 .table__viewport {
 	overflow: hidden;
 	width: 100%;
-	height: 75svh;
+	max-height: 75svh;
 }
 
 .table {
@@ -12,4 +12,15 @@
 	background-color: white;
 	border-collapse: collapse;
 	border-radius: 5px;
+	&__fallback {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		grid-column: 1 / -1;
+		border-left: 1px solid #ccc;
+		border-right: 1px solid #ccc;
+		border-bottom: 1px solid #ccc;
+		margin-bottom: 0 !important;
+		padding: 20px;
+	}
 }
