--- a/client/src/shared/ui/modal/Modal.module.scss
+++ b/client/src/shared/ui/modal/Modal.module.scss
@@ -17,7 +17,9 @@
 		opacity: 1;
 		visibility: visible;
 	}
+
 	&__body {
+		position: relative;
 		height: 70dvh;
 		overflow-y: scroll;
 		background: #fff;
