Front: cosmetic changes
- change custom Table entity to Antd
- fix clientApi tags
- change ClientList displaying
- improve directionsControl displaying
- modify StaffList columns
- create function to convert any to string
- fix select for building

--- a/client/src/widgets/ClientsList/ui/ClientsList.module.scss
+++ b/client/src/widgets/ClientsList/ui/ClientsList.module.scss
@@ -1,8 +1,26 @@
-.root {
+.table {
 	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	row-gap: 10px;
-	z-index: 10;
+
+	&__info {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		background: #fafafa;
+		padding: 10px 10px 0 10px;
+		width: 100%;
+
+		span {
+			font-weight: 500;
+		}
+
+		&__pagination {
+			display: flex;
+			align-items: center;
+			column-gap: 10px;
+		}
+	}
 }
