change table, add edit group modal

--- a/client/src/widgets/GroupsList/ui/GroupsList.module.scss
+++ b/client/src/widgets/GroupsList/ui/GroupsList.module.scss
@@ -4,4 +4,18 @@
 		gap: 10px;
 		justify-content: space-around;
 	}
+
+	&__users {
+		display: flex;
+		flex-direction: column;
+
+		&_item {
+			padding: 5px 0;
+
+			&_borderBottom:nth-child(odd) {
+				width: 100%;
+				border-bottom: 2px solid #f0f0f0;
+			}
+		}
+	}
 }
