--- a/client/src/features/MarkClient/ui/MarkClient.module.scss
+++ b/client/src/features/MarkClient/ui/MarkClient.module.scss
@@ -8,6 +8,7 @@
 	box-shadow: 5px 5px 5px grey;
 	border-radius: 6px;
 	border: 1px solid grey;
+	height: min-content;
 
 	&__title {
 		font-size: 22px;
